[package]
name = "sockgauge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "net", "io-std", "io-util", "sync", "macros", "tokio-macros"] }